# uni-final-ai

./: .gitignore  personal_generation_prompt.txt  pyproject.toml  requirements.txt
analyzer_v1/: batch_interview_processor.py  demo_therapist_bot.py  interviews.py  therapist_bot.py
analyzer_v1/analysis_results/: interview_001_20250913_172832_analysis.json  interview_001_20250913_174345_analysis.json  interview_001_20250913_174832_analysis.json  interview_002_20250913_175031_analysis.json  interview_003_20250913_175312_analysis.json  interview_004_20250913_175502_analysis.json  interview_005_20250913_175746_analysis.json  interview_006_20250913_180239_analysis.json  interview_007_20250913_180543_analysis.json  interview_008_20250913_190830_analysis.json  interview_009_20250913_191049_analysis.json  interview_010_20250913_191228_analysis.json  (+7 more)
dataset_gen/: .~lock.my_personas.csv#  1_21099555107.docx  CLEANUP_SUMMARY.md  MIGRATION_GUIDE.md  README.md  STRUCTURE.txt  __init__.py  batch_input.jsonl  config.py  constants.py  data_generation.ipynb  intro_and_vars_by_dr_madanifar.docx  my_personas.csv  persona_analyzer.ipynb  persona_generation.ipynb  persona_generation_prompt.py  personas2.json  questions.py  utils.py
excels/: combined_data.xlsx  combined_data_v1.0_better.xlsx  combined_data_v1.0_resized.xlsx  sample_data_v1.0.xlsx
interview_files/: a.docx  b.docx  b.json  c.docx  d.docx
knowledge_base/: personas.json
playground/: data_generation.ipynb  jsonl_to_excel.ipynb  test_persian_pdf.ipynb
src/: main.py  process_interview_files.py  therapist_bot.py
(+88 files in other folders)
